--- a/partials/archive.html
+++ b/partials/archive.html
@@ -1,14 +1,14 @@
 <!-- page: OUR TEAM -->
 <section id="team" class="l-section">
 	
-	<div class="l-subsection">
+	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
 				<p class="subtitle">Changement de date, changement de nom</p>
 				<h2 class="highlight"><strong>Faites de la Musique devient Ariège'n Zic</strong></h2>
 				
-				<p class="size_big">Tandis que la Fdlm Team finit le démontage et le rangement de nos installations, nous nous retournons déjà avec une fierté mêlée de nostalgie sur ce week-end magique qui s'achève.<br>
+				<p class="size_big">
 				Merci aux 600 participants qui ont honoré Malegoude de leur bonne humeur.<br>
 				Gratitude pour le travail impressionnant des 20 bénévoles de l'Asso et l'aide spontanée de nombreux festivaliers.<br>
 				Mille mercis aux groupes et artistes qui ont animé nos deux scènes et réalisé des JAM SESSIONS d'un niveau remarquable jusqu'à l'aube.<br>
@@ -21,7 +21,7 @@
 
 				<a class="g-btn type_primary size_big green" scroll-to="#part-2" duration="1000" offset="80"><span>Edition 2013 <i class="fa fa-arrow-down"></i></span></a>
 				
-				
+				<img ng-src="img/panorama.jpg" style="width:100%;padding-top:30px;"></img>
 			</div>
 		</div>
 	</div>
@@ -31,16 +31,9 @@
 <!-- page: OUR TEAM -->
 <section id="part-2" class="l-section">
 	
-	<div class="l-subsection">
+	<div class="l-subsection" style="background-image:url(img/placeholder/parallax.png);">
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
-			
-				<p class="subtitle">LineUp de 2013?</p>
-				
-				<p class="size_big">Nos styles ... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
 				
 				<div class="g-hr type_invisible"></div>
 				
@@ -51,10 +44,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/WhiteCardRadio-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/WhiteCardRadio-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-											<h4 class="w-team-member-name"><a href="#artiste/white-card-radio" target="_blank"><i class="fa fa-chevron-right"></i> White Card Radio</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> White Card Radio</h4>
 										<h4 class="w-team-member-name"></h4>
 										<div class="w-team-member-role">Electro Impro Jazz</div>
 										<div class="w-team-member-role">
@@ -67,11 +60,11 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/LaTheorieDesCordes-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/LaTheorieDesCordes-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name"><a href="#artiste/theorie-des-cordes" target="_blank"><i class="fa fa-chevron-right"></i> La théorie des Cordes</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> La théorie des Cordes</h4>
 											<div class="w-team-member-role">Rock Progressif - Jazz Rock</div>
 											<div class="w-team-member-role">
 												Présent le vendredi 21 Juin 2013 20h30-23h00 
@@ -84,11 +77,11 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/GuitarHeroBeatmasher-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/GuitarHeroBeatmasher-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name"><a href="#artiste/guitar-hero-beatmaster" target="_blank"><i class="fa fa-chevron-right"></i> Voir Guitar Hero Beatmasher</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Guitar Hero Beatmasher</h4>
 											<h4 class="w-team-member-name"></h4>
 											<div class="w-team-member-role">Psybient - Rock Psychedelique</div>
 											<div class="w-team-member-role">
@@ -102,11 +95,11 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/Drivin-South-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/Drivin-South-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<div class="w-team-member-meta-h">
-											<h4 class="w-team-member-name"><a href="#artiste/drivin-south" target="_blank"><i class="fa fa-chevron-right"></i> Voir Drivin' South</a></h4>
+											<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Drivin' South</h4>
 											<div class="w-team-member-role">Blues Rock Funk</div>
 											<div class="w-team-member-role">
 												Présent le vendredi 21 Juin 2013 00h30-03h00 
@@ -119,10 +112,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/GastonFive-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/gaston-five" target="_blank"><i class="fa fa-chevron-right"></i> Voir Gaston Five</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Gaston Five</h4>
 										<div class="w-team-member-role">Rock</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 18h30-21h00 
@@ -135,10 +128,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/artistes/tremix1.jpg" alt="member photo" />
+										<img ng-src="img/artistes/tremix1.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir Tremix</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Tremix</h4>
 										<div class="w-team-member-role">Ska Rock Balkan Reggae Swing</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 21h00-00h00 
@@ -150,10 +143,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name">Da Krew Lab</h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Da Krew Lab</h4>
 										<div class="w-team-member-role">Exp Electro Break Drum'n Tek</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 00h00-01h45
@@ -165,10 +158,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/psykoyot-500x500.png" alt="member photo" />
+										<img ng-src="img/fdlm/psykoyot-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/tremix" target="_blank"><i class="fa fa-chevron-right"></i> Voir DJ Psykoyot</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> DJ Psykoyot</h4>
 										<div class="w-team-member-role">Trance Trance full on Night</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 03h45-04h30 puis 5h30-7h00
@@ -180,10 +173,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/Sychodelicious-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/Sychodelicious-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/synchodelicious" target="_blank"><i class="fa fa-chevron-right"></i> Voir Sychodelicious</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Sychodelicious</h4>
 										<div class="w-team-member-role">Trance Trance full on Night</div>
 										<div class="w-team-member-role">
 											Présent le samedi 22 Juin 2013 04h30-05h30
@@ -216,13 +209,13 @@
 					<div class="w-clients-list">
 						<div class="w-clients-list-h">
 							<a class="w-clients-item" href="javascript:void(0);">
-								<img src="http://upload.wikimedia.org/wikipedia/fr/c/c0/Super_U_logo.png" alt="Client logo" />
+								<img ng-src="http://upload.wikimedia.org/wikipedia/fr/c/c0/Super_U_logo.png" alt="Client logo" />
 							</a>
 							<a class="w-clients-item" href="javascript:void(0);">
-								<img src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
+								<img ng-src="http://www.annuaire-mairie.fr/panneau-malegoude.png" alt="Client logo" />
 							</a>
 							<a class="w-clients-item" href="javascript:void(0);">
-								<img src="img/mairie_mirepoix.gif" alt="Client logo" />
+								<img ng-src="img/mairie_mirepoix.gif" alt="Client logo" />
 							</a>
 						</div>
 					</div>
