--- a/partials/home.html
+++ b/partials/home.html
@@ -27,8 +27,8 @@
 				<span id="countdown">
 				</span>
 				<div>
-				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-vendredi-13-juin-2014"><span> Programme du Vendredi 13 Juin</span></a>
-				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-samedi-14-juin-2014"><span>Programme du Samedi 14 Juin</span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zic-vendredi-13-juin-2014"><span> Programme du Vendredi 13 Juin</span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zic-samedi-14-juin-2014"><span>Programme du Samedi 14 Juin</span></a>
 				</div>
 			</div>
 		</div>
@@ -115,10 +115,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/hassah-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/hassah-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir Hassah</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Voir Hassah</h4>
 										<div class="w-team-member-role">Fusion de Rumba, Rock, Blues, Salsa, Ragga, Disco et Hip Hop sur des textes en Espagnol</div>
 										<div class="w-team-member-role">
 											Présent le vendredi 4h00-6h00 
@@ -130,10 +130,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/DaKrewLab-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir Da Krew Lab</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Voir Da Krew Lab</h4>
 										<div class="w-team-member-role">Electro, Break, Drum'n'Bass, Breakcore, Hip Hop, Tek</div>
 										<div class="w-team-member-role">
 											Présent le vendredi 4h00-6h00 
@@ -145,10 +145,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/LesBoozeBrothers-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/LesBoozeBrothers-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir les Booze Brothers</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Booze Brothers</h4>
 										<div class="w-team-member-role">Un grand métissage des influences, des genres (rock, hardcore, electro, folk, world, punk) et des langues.</div>
 										<div class="w-team-member-role">
 											Présent le vendredi 4h00-6h00 
@@ -160,10 +160,10 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img src="img/fdlm/asap-500x500.jpg" alt="member photo" />
+										<img ng-src="img/fdlm/asap-500x500.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
-										<h4 class="w-team-member-name"><a href="#artiste/hassah" target="_blank"><i class="fa fa-chevron-right"></i> Voir ASAP</a></h4>
+										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> ASAP</h4>
 										<div class="w-team-member-role">Pop rock Française</div>
 										<div class="w-team-member-role">
 											Présent le vendredi 4h00-6h00 
