--- a/partials/prog-samedi.html
+++ b/partials/prog-samedi.html
@@ -6,9 +6,9 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h4><strong>Deux jours de folies</strong></h4>
+				<h4 style="padding-top: 40%;color:black;"></h4>
 				
-				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-vendredi-13-juin-2014"><span><i class="fa fa-reply"></i> Vendredi 13 Juin</span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zic-vendredi-13-juin-2014"><span><i class="fa fa-reply"></i> Vendredi 13 Juin</span></a>
 				<a class="g-btn type_primary green" scroll-to="#samedi" duration="1000" offset="80"><span>Samedi 14 Juin <i class="fa fa-arrow-down"></i></span></a>
 				
 			</div>
@@ -23,9 +23,6 @@
 			<div id="samedi" class="l-subsection-hh g-html i-cf">
 				<p class="subtitle">Programmation</p>
 				<h2 class="highlight"><strong>Samedi 14 juin 2014</strong></h2>
-				<!--
-				<p class="size_big">This is our dedicated team who work day-in and day-out together to bring our clients<br>the most amazing projects for a digitally connected world.</p>
-				-->
 				<div class="g-hr type_invisible"></div>
 				<div ng-include="'partials/affiches.html'"></div>
 				<div ng-include="'partials/timeline.html'"></div>				
