--- a/partials/prog-vendredi.html
+++ b/partials/prog-vendredi.html
@@ -6,10 +6,10 @@
 		<div class="l-subsection-h">
 			<div class="l-subsection-hh g-html i-cf">
 			
-				<h4><strong>Deux jours de folies</strong></h4>
+				<h4 style="padding-top: 40%;color:black;"></h4>
 				
 				<a class="g-btn type_primary green" scroll-to="#vendredi" duration="1000" offset="80"><span><i class="fa fa-arrow-down"></i> Vendredi 13 Juin</span></a>
-				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zik-samedi-14-juin-2014"><span>Samedi 14 Juin <i class="fa fa-share"></i></span></a>
+				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zic-samedi-14-juin-2014"><span>Samedi 14 Juin <i class="fa fa-share"></i></span></a>
 				
 			</div>
 		</div>
@@ -24,9 +24,6 @@
 			<div id="vendredi" class="l-subsection-hh g-html i-cf">
 				<p class="subtitle">Programmation</p>
 				<h2 class="highlight"><strong>Vendredi 13 juin 2014</strong></h2>
-				<!--
-				<p class="size_big">This is our dedicated team who work day-in and day-out together to bring our clients<br>the most amazing projects for a digitally connected world.</p>
-				-->
 				<div class="g-hr type_invisible"></div>
 				<div ng-include="'partials/affiches.html'"></div>				
 				<div ng-include="'partials/timeline.html'"></div>				
