--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -121,7 +121,7 @@
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Voir Hassah</h4>
 										<div class="w-team-member-role">Fusion de Rumba, Rock, Blues, Salsa, Ragga, Disco et Hip Hop sur des textes en Espagnol</div>
 										<div class="w-team-member-role">
-											Présent le vendredi 4h00-6h00 
+											Présent le vendredi 19h00-21h00 
 										</div>
 									</div>
 								</div>
@@ -136,7 +136,7 @@
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Voir Da Krew Lab</h4>
 										<div class="w-team-member-role">Electro, Break, Drum'n'Bass, Breakcore, Hip Hop, Tek</div>
 										<div class="w-team-member-role">
-											Présent le vendredi 4h00-6h00 
+											Présent le vendredi 1h30-3h00 
 										</div>
 									</div>
 								</div>
@@ -151,7 +151,7 @@
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Booze Brothers</h4>
 										<div class="w-team-member-role">Un grand métissage des influences, des genres (rock, hardcore, electro, folk, world, punk) et des langues.</div>
 										<div class="w-team-member-role">
-											Présent le vendredi 4h00-6h00 
+											Présent le samedi 23h30-1h00 
 										</div>
 									</div>
 								</div>
@@ -166,7 +166,7 @@
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> ASAP</h4>
 										<div class="w-team-member-role">Pop rock Française</div>
 										<div class="w-team-member-role">
-											Présent le vendredi 4h00-6h00 
+											Présent le vendredi 21h30-23h00 
 										</div>
 									</div>
 								</div>
@@ -189,7 +189,7 @@
 	//@origin https://mindgrader.com/tutorials/1-how-to-create-a-simple-javascript-countdown-timer
 
 	// set the date we're counting down to
-	var target_date = new Date("Jun 15, 2014 19:00:00").getTime();
+	var target_date = new Date("Jun 13, 2014 20:30:00").getTime();
 	 
 	// variables for time units
 	var days, hours, minutes, seconds;
