--- a/partials/prog-vendredi.html
+++ b/partials/prog-vendredi.html
@@ -3,11 +3,9 @@
 <!-- page: ABOUT -->
 <section id="about" class="l-section">
 	<div class="l-subsection" style="background-image: url(img/fdlm/img-4.jpg);">
-		<div class="l-subsection-h">
-			<div class="l-subsection-hh g-html i-cf">
-			
-				<h4 style="padding-top: 40%;color:black;"></h4>
-				
+		<div class="l-subsection-h programmation-splashscreen">
+			<div class="l-subsection-hh g-html i-cf programmation-buttons">
+							
 				<a class="g-btn type_primary green" scroll-to="#vendredi" duration="1000" offset="80"><span><i class="fa fa-arrow-down"></i> Vendredi 13 Juin</span></a>
 				<a class="g-btn type_primary" href="/#!/programmation-ariege-n-zic-samedi-14-juin-2014"><span>Samedi 14 Juin <i class="fa fa-share"></i></span></a>
 				
