--- a/partials/archive.html
+++ b/partials/archive.html
@@ -128,7 +128,7 @@
 							<div class="w-team-member">
 								<div class="w-team-member-h">
 									<div class="w-team-member-image">
-										<img ng-src="img/artistes/tremix1.jpg" alt="member photo" />
+										<img ng-src="img/artistes/tremix.jpg" alt="member photo" />
 									</div>
 									<div class="w-team-member-meta">
 										<h4 class="w-team-member-name"><i class="fa fa-chevron-right"></i> Tremix</h4>
