--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -21,6 +21,7 @@
 
                 <img ng-src="img/info.png" style="width:60%;" alt="Informations Festival Ariege'n Zic"/>
 
+				<h4 class="highlight">PAF 10€ et 15€ le pass weekend. Gratuit pour les enfants</h4>
 			</div>
 		</div>
 	</div>
