--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -194,8 +194,8 @@
 	// set the date we're counting down to
 	var target_date = new Date("Jun 13, 2014 20:30:00").getTime();
 	if (target_date < new Date().getTime()) {
-		target_date = new Date("Jun 14, 2014 17:30:00").getTime();
-		$("#verb").text("recommencera")
+		target_date = new Date("Jun 15, 2014 08:00:00").getTime();
+		$("#verb").text("finira")
 		if (target_date < new Date().getTime()) {
 			$("#parallax_subsection_1").hide();
 		}
